--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "prepare": "vite"
   },
   "dependencies": {
+    "@nestjs/mongoose": "^11.0.3",
+    "@reduxjs/toolkit": "^2.8.2",
     "airdrop-interface-markets": "^1.0.45",
     "axios": "^1.9.0",
+    "mongoose": "^8.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^11.0.5",
     "request": "^2.88.2"
   },
   "devDependencies": {
